--- a/nosotros.html
+++ b/nosotros.html
@@ -82,7 +82,7 @@
 				        	<div class="content">
 				        		<div class="center">
 				            		<div class="ui primary button">
-				            			<a class="white-text text-darken-2" href="inicio.carlos.html">Página</a>
+				            			<a class="white-text text-darken-2" href="inicio_carlos.html">Página</a>
 				            		</div>
 				        		</div>
 				        	</div>
