--- a/evidencia.html
+++ b/evidencia.html
@@ -21,7 +21,7 @@
 
 			<div class="ui red massive inverted three item menu">
 				  <div class="ui container">
-				    <a class="item" href="inicio.carlos.html">
+				    <a class="item" href="inicio_carlos.html">
 				      <i class="info icon"></i>Información General
 				    </a>
 				    <a class="item" href="teoria.html">
